# voice-agent

./: .dockerignore  .gitignore  DESIGN.md  Dockerfile  LICENSE  agent.py  call.py  crud.py  database.py  init_db.py  livekit.toml  models.py  prompt.py  pyproject.toml  requirements.txt  token_server.py  whatsapp.py
frontend/: components.json  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  globals.css
frontend/src/components/: CallStatus.tsx  agent-chat-transcript.tsx  agent-track-control.tsx
frontend/src/pages/: CallPage.tsx  LandingPage.tsx
