[project]
name = "voice-agent"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aiodns>=4.0.4",
    "asyncpg>=0.30.0",
    "flask>=3.1.3",
    "httpx>=0.28.1",
    "livekit-agents[groq,mcp,sarvam,silero,turn-detector]~=1.5",
    "livekit-plugins-noise-cancellation~=0.2",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.51",
    "twilio>=9.10.9",
]
